@@ -11,7 +11,7 @@ loader_version=0.11.2
 maven_group = dev.the-fireplace
 archives_base_name = UnforgivingVoid
 github_slug = Unforgiving-Void
-mod_version = 2.0.1
+mod_version = 3.0.0
 release_type = release
 
 # Dependencies
