@@ -1,33 +1,52 @@
 package the_fireplace.unforgivingvoid;
 
-import com.google.common.collect.Lists;
-import com.google.common.collect.Sets;
-import me.shedaniel.autoconfig.ConfigData;
-import me.shedaniel.autoconfig.annotation.Config;
-import me.shedaniel.autoconfig.annotation.ConfigEntry;
+import dev.the_fireplace.lib.api.storage.access.intermediary.StorageReadBuffer;
+import dev.the_fireplace.lib.api.storage.access.intermediary.StorageWriteBuffer;
+import dev.the_fireplace.lib.api.storage.lazy.LazyConfig;
 
-import java.util.List;
+import java.util.Collection;
 
-@Config(name = UnforgivingVoid.MODID)
-public class ModConfig implements ConfigData {
-    @ConfigEntry.Gui.Tooltip
-    public int triggerAtY = -32;
-    @ConfigEntry.Gui.Tooltip
+public class ModConfig extends LazyConfig {
+    public short triggerAtY = -32;
     public boolean dropObsidian = false;
-    @ConfigEntry.Gui.Tooltip(count=2)
     public int fireResistanceSeconds = 180;
-    @ConfigEntry.Gui.Tooltip
     public int horizontalDistanceOffset = 128;
-    @ConfigEntry.Gui.Tooltip(count=2)
-    public List<String> dimensionFilter = Lists.newArrayList("*");
+    public String voidDimension = "*";
+    public String targetDimension = "nether";
+    public short approximateSpawnY = 128;
+    public static final String[] SAFE_PLATFORM_MODES = {"always", "attempt", "off"};
+    public String safePlatformMode = "always";
+    public static final String[] SKY_SPAWNING_MODES = {"allow", "avoid", "never"};
+    public String skySpawningMode = "avoid";
 
     @Override
-    public void validatePostLoad() {
-        if(fireResistanceSeconds < 0)
-            fireResistanceSeconds = 0;
-        if(horizontalDistanceOffset < 0)
-            horizontalDistanceOffset = -horizontalDistanceOffset;
-        //Convert to set then list to deduplicate
-        dimensionFilter = Lists.newArrayList(Sets.newHashSet(dimensionFilter));
+    public String getId() {
+        return UnforgivingVoid.MODID;
+    }
+
+    @Override
+    public void readFrom(StorageReadBuffer buffer) {
+        triggerAtY = buffer.readShort("triggerAtY", triggerAtY);
+        dropObsidian = buffer.readBool("dropObsidian", dropObsidian);
+        fireResistanceSeconds = buffer.readInt("fireResistanceSeconds", fireResistanceSeconds);
+        horizontalDistanceOffset = buffer.readInt("horizontalDistanceOffset", horizontalDistanceOffset);
+        voidDimension = buffer.readString("voidDimension", voidDimension);
+        targetDimension = buffer.readString("targetDimension", targetDimension);
+        approximateSpawnY = buffer.readShort("approximateSpawnY", approximateSpawnY);
+        safePlatformMode = buffer.readString("safePlatformMode", safePlatformMode);
+        skySpawningMode = buffer.readString("skySpawningMode", skySpawningMode);
+    }
+
+    public String validate(String string, Collection<String> validOptions, String defaultValue) {
+        if (!validOptions.contains(string)) {
+            return defaultValue;
+        }
+
+        return string;
+    }
+
+    @Override
+    public void writeTo(StorageWriteBuffer buffer) {
+
     }
 }
